--- a/passenger counter/index.css
+++ b/passenger counter/index.css
@@ -5,14 +5,27 @@ body{
     font-weight: bold;
     text-align: center;
     color: antiquewhite;
+    height: 100vh;
+}
+
+.container {
+    background: white;
+    opacity: 60%;
+    max-width: 80%;
+    margin: auto;
+    border: 3px solid black;
+    border-radius: 10px;
+
 }
 
 h1{
+    color: black;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 h2{
+    color: black;
     font-size: 50px;
     margin-top: 0;
     margin-bottom: 20px;
@@ -35,4 +48,8 @@ button{
 
 #save-btn{
     background: darkgreen;
+}
+
+#save-el {
+    color: black;
 }
